--- a/index.html
+++ b/index.html
@@ -1,27 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--header-->
     <header>
-        <nav>
-         <a href="/">WEBSTUDIO</a>
-             <ul>
-              <li><a href=""></a>Studio</li>
-              <li><a href=""></a>Portfolio</li>
-              <li><a href=""></a>Contacts</li>
-             </ul>
-        </nav>
-        <address>
-           <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-           </ul>
-        </address>
+      <nav>
+        <a href="/">WEBSTUDIO</a>
+        <ul>
+          <li><a href=""></a>Studio</li>
+          <li><a href=""></a>Portfolio</li>
+          <li><a href=""></a>Contacts</li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
-</body> 
+    <!--main -->
+    <main>
+      <!--hero-->
+      <section>
+        <h1>Effective Solutionsfor Your Business</h1>
+        <a href="">Order Service</a>
+      </section>
+      <!--section1-->
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--What are we doing-->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="./images/imac.jpg" alt="imac" width="360" />
+          </li>
+          <li>
+            <img src="./images/phones.jpg" alt="phones" width="360" />
+          </li>
+          <li>
+            <img
+              src="./images/phonelaptop.jpg"
+              alt="phone and laptop"
+              width="360"
+            />
+          </li>
+        </ul>
+      </section>
+      <!--team-->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team/Mark Guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/team/Tom Ford.jpg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/Camila Garcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/Daniel Wilson.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
+</html>
