--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!--hero-->
       <section>
         <h1>Effective Solutionsfor Your Business</h1>
-        <a href="">Order Service</a>
+        <button type="button">Order Service</button>
       </section>
       <!--section1-->
       <section>
@@ -122,5 +122,13 @@
         </ul>
       </section>
     </main>
+    <!--footer-->
+    <footer>
+      <a href="/">WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
