--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -89,7 +89,7 @@
         <ul>
           <li>
             <img
-              src="./images/team/Mark Guerrero.jpg"
+              src="./images/team/markguerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -97,13 +97,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/team/Tom Ford.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/team/tomford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/team/Camila Garcia.jpg"
+              src="./images/team/camilagarcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -112,7 +112,7 @@
           </li>
           <li>
             <img
-              src="./images/team/Daniel Wilson.jpg"
+              src="./images/team/danielwilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
